@@ -25,7 +25,7 @@ for dir in /usr /usr/local; do
   ln -sv share/{man,doc,info} $dir
 done
 case $(uname -m) in
- x86_64) ln -sv lib /lib64 &amp;&amp; ln -sv lib /usr/lib64 ;;
+ x86_64) ln -sv lib /lib64 &amp;&amp; ln -sv lib /usr/lib64 &amp;&amp; ln -sv lib /usr/local/lib64 ;;
 esac
 mkdir -v /var/{log,mail,spool}
 ln -sv /run /var/run
