@@ -1,3 +1,6 @@
+2013-08-05 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Use STATIC_GATEWAY for ipv4-static-route purposes
+
 2013-05-15 Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Remove unneeded options and commands from mountfs and
      mountvirtfs when mtab is a symlink to /proc/self/mounts
